--- a/docker/rpcnode/Dockerfile
+++ b/docker/rpcnode/Dockerfile
@@ -2,6 +2,8 @@ FROM ubuntu:latest
 RUN apt-get update && \
     apt-get install -y make git golang jq python3 curl vim
 
+SHELL ["/bin/bash", "-c"]
+
 VOLUME [ "/sei-protocol" ]
 VOLUME [ "/root/go/pkg/mod" ]
 WORKDIR /sei-protocol/sei-chain
@@ -16,3 +18,4 @@ COPY scripts/deploy.sh /usr/bin/deploy.sh
 COPY scripts/step0_build.sh /usr/bin/build.sh
 COPY scripts/step1_configure_init.sh /usr/bin/configure_init.sh
 COPY scripts/step2_start_sei.sh /usr/bin/start_sei.sh
+ENV PATH "$PATH:$HOME/go/bin"
