--- a/docker/localnode/config/app.toml
+++ b/docker/localnode/config/app.toml
@@ -190,10 +190,13 @@ enable-unsafe-cors = true
 
 # snapshot-interval specifies the block interval at which local state sync snapshots are
 # taken (0 to disable). Must be a multiple of pruning-keep-every.
-snapshot-interval = 500
+snapshot-interval = 100
 
 # snapshot-keep-recent specifies the number of recent snapshots to keep and serve (0 to keep all).
-snapshot-keep-recent = 2
+snapshot-keep-recent = 3
+
+# snapshot-directory specifies and overrides the directory for where to store the snapshots
+snapshot-directory = ""
 
 [wasm]
 # This is the maximum sdk gas (wasm and storage) that we allow for any x/wasm "smart" queries
