--- a/integration_test/bank_module/simulation_tx.yaml
+++ b/integration_test/bank_module/simulation_tx.yaml
@@ -1,18 +1,17 @@
 - name: Test simulation sending funds
   inputs:
     # Create test account
-    - cmd: seid keys add bank-test  --keyring-backend test
+    - cmd: seid keys add bank-test --keyring-backend test
     - cmd: printf "12345678\n" | seid keys show -a admin
       env: ADMIN_ACC
     - cmd: seid keys show -a bank-test --keyring-backend test
       env: BANK_TEST_ACC
+
     # Send funds
     - cmd: printf "12345678\n" | seid tx bank send $ADMIN_ACC $BANK_TEST_ACC 1sei -b block --fees 2000usei --chain-id sei -y
 
-    - cmd: seid tx bank send $ADMIN_ACC $BANK_TEST_ACC 1sei --from $ADMIN_ACC  --chain-id sei -b block -y --fees 10sei --dry-run  --keyring-backend test
+    - cmd: seid tx bank send $ADMIN_ACC $BANK_TEST_ACC 1000sei --from $ADMIN_ACC  --chain-id sei -b block -y --dry-run --keyring-backend test
       env: GAS_ESIMATE
-
-    - cmd: echo $GAS_ESIMATE_JSON | "jq. "
 
     # Validate that only the 1sei is sent
     - cmd: seid q bank balances $BANK_TEST_ACC --output json | jq -r .balances[0].amount
@@ -20,7 +19,8 @@
 
   verifiers:
     # Bank balance should be 1sei
-    - type: eval
-      expr: BANK_TEST_BAL == 1000000
-    - type: eval
-      expr: GAS_ESIMATE == "gas estimate 123"
+    # - type: eval
+    #   expr: BANK_TEST_BAL == 1000000
+    - type: regex
+      expr: "gas_estimate: [0-9]+"
+      result: GAS_ESIMATE
