--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -77,6 +77,13 @@ jobs:
               "python3 integration_test/scripts/runner.py integration_test/acl_module/accesscontrol_register_test.yaml",
             ]
           },
+          {
+            name: "Distribution Module",
+            scripts: [
+              "python3 integration_test/scripts/runner.py integration_test/distribution_module/community_pool.yaml",
+              "python3 integration_test/scripts/runner.py integration_test/distribution_module/rewards.yaml",
+            ]
+          },
         ]
     steps:
       - uses: actions/checkout@v3
