--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -134,7 +134,22 @@ jobs:
   integration-test-check:
     name: Integration Test Check
     runs-on: ubuntu-latest
-    needs: integration-tests # This job will only run if all 'integration-tests' jobs have completed successfully
+    needs: integration-tests
+    if: always()
     steps:
+      - name: Get workflow conclusion
+        id: workflow_conclusion
+        run: |
+          conclusion=$(curl --request GET \
+          --url https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }} \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' | jq -r '. | .conclusion')
+          echo "Test job conclusion: $conclusion"
+          echo "CONCLUSION=$conclusion" >> $GITHUB_ENV
       - name: Check
-        run: echo "All tests have passed!"
+        run: |
+          if [[ "${{ env.CONCLUSION }}" == "success" ]]; then
+            echo "All tests have passed!"
+          else
+            echo "Some or all tests have failed!"
+            exit 1
+          fi
