--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -140,9 +140,7 @@ jobs:
       - name: Get workflow conclusion
         id: workflow_conclusion
         run: |
-          conclusion=$(curl --request GET \
-          --url https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }} \
-          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' | jq -r '. | .conclusion')
+          conclusion=$(curl --request GET --url https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }} | jq -r '. | .conclusion')
           echo "Test job conclusion: $conclusion"
 
           if [[ "$conclusion" == "success" ]]; then
