--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -139,13 +139,15 @@ jobs:
     steps:
       - name: Get workflow conclusion
         id: workflow_conclusion
-        timeout-minutes: 1
+        timeout-minutes: 5
         run: |
           conclusion="null"
 
           while [[ $conclusion == "null" ]]; do
             sleep 5  # Wait for 5 seconds
+            curl --request GET --url https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}
             conclusion=$(curl --request GET --url https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }} | jq -r '. | .conclusion')
+            echo "Test job conclusion: $conclusion"
           done
 
           echo "Test job conclusion: $conclusion"
