--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -152,6 +152,7 @@ jobs:
 
               for status in $job_statuses
               do
+                echo "Status: $status"
                 if [[ "$status" != "success" ]]; then
                   echo "Some or all tests have failed!"
                   exit 1
